@@ -1,3 +1,6 @@
+2011-06-16
+ * getSatisfiedIntervals method
+
 2011-05-20
  * Meade LX200 driver split from generic LX200
 
